local_path_override(
    module_name = "org_kcl_lang_rules_kcl",
    path = "../..",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.34.5")
bazel_dep(name = "org_kcl_lang_rules_kcl", version = "0.0.0")

kcl = use_extension("@org_kcl_lang_rules_kcl//kcl:extensions.bzl", "kcl")
kcl.toolchain(
    name = "kcl",
    kcl_version = "0.7.4",
)
use_repo(kcl, "kcl_toolchains")

register_toolchains("@kcl_toolchains//:all")
