workspace(name = "rules_kcl_examples")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "09b51a9957adc56c905a2c980d6eb06f04beb1d85c665b467f659871403cf423",
    strip_prefix = "bazel-lib-1.34.5",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v1.34.5/bazel-lib-v1.34.5.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")

aspect_bazel_lib_dependencies()

# Override http_archive for local testing
local_repository(
    name = "org_kcl_lang_rules_kcl",
    path = "../..",
)

load("@org_kcl_lang_rules_kcl//kcl:repositories.bzl", "kcl_register_toolchains", "rules_kcl_dependencies")

rules_kcl_dependencies()

kcl_register_toolchains(
    name = "kcl_0_7_4",
    kcl_version = "0.7.4",
)
